<resources>
    <string name="app_name">tabsDeneme</string>
    <string name="bu_ana_klasor">Bu klasör silinemez!</string>
    <string name="yok">Yok</string>
    <string name="lutfen">Lütfen tüm alanları doldurun!</string>
    <string name="bilgi">Bilgi</string>
    <string name="bilgi_yazisi">Ders ve ya fotoğraf silmek için galeride klasör ve ya resime uzun süre basılı tutup gelen menüden silme işlemini gerçekleştirebilirsiniz.</string>
    <string name="dersi_sil_soru">Bu dersi içindeki tüm resimlerle birlikte silmek istediğinden emin misin?</string>
    <string name="ders_silindi">Ders Silindi</string>
    <string name="hesaba_bag">Hesaba henüz bağlanılamadı!</string>
    <string name="seciniz">Seçiniz</string>
    <string name="delete">Sil</string>
    <string name="silindi">Silindi</string>
    <string name="tanimlanamayanlar">Tanimlanamayanlar</string>
    <string name="hakkinda">Hakkında</string>
    <string name="tesekkur">Bu uygulamayı geliştirme sürecinde desteğini benden esirgemeyen sevgili oda arkadaşım Utku Haspulat a teşekkürler.</string>
    <string name="tahtayi_cek">Tahtayı Çek</string>
    <string name="ders_notu_cek">Ders Notu Çek</string>
    <string name="yeniden_cek">YENİDEN ÇEK</string>
    <string name="kaydet">KAYDET</string>
    <string name="buluta_yuk">Buluta Yükleniyor</string>
    <string name="kalan_sayi">Kalan Resim Sayısı:</string>
    <string name="bulut_info1">İşlem Boyunca Lütfen Uygulamadan Çıkmayınız</string>
    <string name="bulut_info2">Arka Plana Alabilirsiniz</string>
    <string name="uni_name">ÜNİVERSİTE</string>
    <string name="nick_name">NİCK</string>
    <string name="sd_kart">SD Karta Kaydet</string>
    <string name="ekle">EKLE</string>
    <string name="gor">GOR</string>
    <string name="ders_kodu">Ders Kodu:</string>
    <string name="gun">Gün:</string>
    <string name="baslangic">Başlangıç:</string>
    <string name="bitis">Bitiş:</string>
    <string name="ders_Sec">↓ Ders Seç ↓</string>
    <string name="foto_cek">Foto Çek</string>
    <string name="yuklenmemis_sayi">Yüklenmemiş Resim sayısı:</string>
    <string name="buluta_yukle">Buluta Yükle</string>
    <string name="istatistikler">İstatistikler</string>
    <string name="cekilen_resim_sayi">Çekilen Resim Sayısı:</string>
    <string name="suanki_ders">Şu Anda Bulunduğun Ders:</string>
    <string name="kaydedildi">Kaydedildi</string>
    <string name="ders_girilmemis">Henüz ders girilmemiş...</string>
    <string name="secim_gerekli">Seçim yapmanız gerekli!</string>
    <string name="tahta_fotolari">Tahta Fotograflari</string>
    <string name="ders_notlari">Ders Notlari</string>
    <string name="izinsiz_devam_yok">Gerekli izinleri vermeden devam edemezsin :(</string>
    <string name="sd_kart_yok">Telefonunuzda SD Kart Yok!</string>
    <string name="sd_kart_Secenegi">SD kart seçeneğini bir daha ASLA değiştiremeyeceksin, emin misin?</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="oncelikle_bilgi">Öncelikle bilgileriniz doldurmanız gerekiyor.</string>
    <string name="internet_bagsiz">Internet bağlı değil!</string>
    <string name="wifi_kapali">WIFI kapalı,Data Paketi açık devam etmek istiyor musun?</string>
    <string name="yukleniyor">Yükleniyor, Lütfen Uygulamadan Çıkmayınız, Arka Plana Alabilirsiniz</string>
    <string name="drive_atildi">Tabs - Dosyalar Drive a Atıldı</string>
    <string name="buluta_aktarildi">Fotoğraflarınız başarılı bir şekilde buluta aktarıldı.</string>
    <string name="dil_secim">Dil seçimini bir daha değiştiremeyeceksin, devam etmek istiyor musun?</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="prompt">Seçiniz</string>
    <string name="open">Aç</string>
    <string name="close">Kapat</string>
    <string name="sali">    Salı</string>
    <string name="crs">Çarşamba</string>
    <string name="cuma">  Cuma</string>
    <string name="prs">Perşembe</string>
    <string name="pzt">Pazartesi</string>
    <string name="salik">salı</string>
    <string name="crsk">çarşamba</string>
    <string name="cumak">cuma</string>
    <string name="prsk">perşembe</string>
    <string name="pztk">pazartesi</string>
    <string name="salib">Salı</string>
    <string name="crsb">Çarşamba</string>
    <string name="cumab">Cuma</string>
    <string name="prsb">Perşembe</string>
    <string name="pztb">Pazartesi</string>
    <string name="giriniz">Giriniz...</string>
    <string name="girilmemis">Girilmemiş...</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="resim_cek_menu">Resim Çek</string>
    <string name="ders_ekle_gor">Ders Ekle/Gör</string>
    <string name="galeri">Galeri</string>
    <string name="buluta_yukle_menu">Buluta Yükle</string>
    <string name="bilgi_guncelle">Bilgilerini Güncelle</string>
    <string-array name="günler">
        <item>Pazartesi</item>
        <item>Salı</item>
        <item>Çarşamba</item>
        <item>Perşembe</item>
        <item>Cuma</item>
    </string-array>
    <string-array name="diller">
        <item>Türkçe</item>
        <item>English</item>
    </string-array>
</resources>