<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/drawer_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/istatistikler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:id="@+id/textView11"
            android:textSize="20sp"
            android:textColor="@color/cast_expanded_controller_background_color"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/cekilen_resim_sayi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView11"
            android:layout_toStartOf="@+id/cekilen_resim_sayisi" />

        <TextView
            android:text="15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cekilen_resim_sayisi"
            android:textColor="@color/colorAccent"
            android:layout_alignBaseline="@+id/textView18"
            android:layout_alignBottom="@+id/textView18"
            android:layout_toEndOf="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/suanki_ders"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="26dp"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/textView18"
            android:layout_toEndOf="@+id/textView21" />

        <TextView
            android:text="@string/suanki_ders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:layout_alignBaseline="@+id/suanki_ders"
            android:layout_alignBottom="@+id/suanki_ders"
            android:layout_alignStart="@+id/textView18" />

        <TextView
            android:text="@string/bilgi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/bigi"
            android:textSize="20sp"
            android:textColor="@color/cast_expanded_controller_background_color" />

        <TextView
            android:text="@string/bilgi_yazisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bigi"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:id="@+id/bilgi_yazisi"
            android:textSize="14sp"
            android:textAlignment="center" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        android:id="@+id/navigation_view_main">

    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>